SK: fixed an issue where header items overlapped content.

--- a/src/app/components/header.css
+++ b/src/app/components/header.css
@@ -4,7 +4,7 @@
 
 }
 
-header {
+#header {
   position: fixed;
   top: 0; 
   width: 100%;
@@ -17,6 +17,10 @@ header {
   align-items: center;
   background-color: rgb(0, 19, 59);
   color: #ffffff;
+}
+
+#header_space {
+  height: 10vh;
 }
 
 #logo {
